--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -1,9 +1,25 @@
-<!-- Automatically display code inside script tags with type=math/tex using MathJax -->
-<script type="text/javascript" defer
-  src="/just-the-docs-tests/assets/js/mathjax-script-type.js">
-</script>
 
 <!-- Copied from https://docs.mathjax.org/en/latest/web/components/combined.html -->
-<script type="text/javascript" id="MathJax-script" defer
-  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+<script type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+
+<!-- Automatically display code inside script tags with type=math/tex using MathJax -->
+<script>
+  // Copied from https://docs.mathjax.org/en/latest/upgrading/v2.html#changes-in-the-mathjax-api
+  MathJax = {
+    options: {
+      renderActions: {
+        findScript: [10, function (doc) {
+          for (const node of document.querySelectorAll('script[type^="math/tex"]')) {
+            const display = !!node.type.match(/; *mode=display/);
+            const math = new doc.options.MathItem(node.textContent, doc.inputJax[0], display);
+            const text = document.createTextNode('');
+            node.parentNode.replaceChild(text, node);
+            math.start = { node: text, delim: '', n: 0 };
+            math.end = { node: text, delim: '', n: 0 };
+            doc.math.push(math);
+          }
+        }, '']
+      }
+    }
+  };
 </script>
